--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <!-- Titles Screens   -->
     <string name="home_screen_title">Menú principal</string>
     <string name="add_note_screen_title">Agregar Nota</string>
-    <string name="detail_note_screen_title">Detalles de  Nota</string>
+    <string name="edit_note_screen_title">Editar Nota</string>
 
     <!-- DetailScreen   -->
     <string name="title_note_label">Título</string>
